--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -659,6 +659,10 @@ figure.effect-bubba:hover p,figure.effect-bubba:hover h2 {
     margin: 5px 0 0 0;
     text-transform: uppercase;
 }
+.product-one {
+	display: flex;
+	flex-wrap: wrap;
+}
 .product-one:nth-child(2){
 	margin-top:30px;
 }
